--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@ caption {
 td {
   border: 1px solid #ccc;
 }
+
+button {
+  padding: 3px 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
